--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ body {
 }
 
 .btn {
-    width: fit-content;
+    width: 70px;
     height: fit-content;
     margin-left: 500px;
     border: 1px solid rgb(255, 251, 251);
